--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "dotext"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Robin Syihab <r@nosql.asia>"]
 description = "Simple Rust library to extract readable text from specific document format like Word Document (docx). Currently only support several format, other format coming soon."
 license = "MIT"
-repository = "https://github.com/anvie/dotext"
+repository = "https://github.com/SubconsciousCompute/dotext"
 
 [dependencies]
-zip = { version = "0.2", default-features = false }
-quick-xml = "0.9.4"
+zip = { version = "0.6" }
+quick-xml = "0.31.0"
